# wasmi

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: build.rs
examples/: interpret.rs  invoke.rs  tictactoe.rs
src/: func.rs  global.rs  host.rs  imports.rs  isa.rs  lib.rs  module.rs  nan_preserving_float.rs  runner.rs  table.rs  value.rs
src/memory/: mod.rs  vec_bytebuf.rs
src/prepare/: compile.rs  mod.rs  tests.rs
src/tests/: host.rs  mod.rs  wasm.rs
tests/spec/: run.rs
validation/src/: context.rs  func.rs  lib.rs  tests.rs  util.rs
