[package]
name = "wasmi"
version = "0.10.0"
edition = "2021"
authors = ["Parity Technologies <admin@parity.io>", "Nikolay Volf <nikvolf@gmail.com>", "Svyatoslav Nikolsky <svyatonik@yandex.ru>", "Sergey Pepyakin <s.pepyakin@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/wasmi"
documentation = "https://paritytech.github.io/wasmi/"
description = "WebAssembly interpreter"
keywords = ["wasm", "webassembly", "bytecode", "interpreter"]
exclude = [ "/res/*", "/tests/*", "/fuzz/*", "/benches/*" ]

[dependencies]
validation = { package = "wasmi-validation", version = "0.4", path = "validation", default-features = false }
parity-wasm = { version = "0.42.0", default-features = false }
memory_units = "0.3.0"
libm = "0.2.1"
num-rational = { version = "0.4", default-features = false, features = ["num-bigint"] }
num-traits = { version = "0.2.8", default-features = false }
downcast-rs = { version = "1.2.0", default-features = false }

[dev-dependencies]
assert_matches = "1.1"
rand = "0.4.2"
wabt = "0.9"

[workspace]
members = ["validation"]
exclude = ["benches"]
